<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/linearLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#E5E7EB"
    android:orientation="vertical">

    <!-- Header -->

    <!-- Mode Toggle -->


    <!-- Content Section -->

    <!-- Bookings/Listings RecyclerView -->

    <!-- Empty State -->


    <androidx.cardview.widget.CardView
        android:id="@+id/linearLayout2"
        android:layout_width="411dp"
        android:layout_height="319dp"
        android:layout_marginStart="1dp"
        android:layout_marginTop="-30dp"
        android:layout_marginEnd="1dp"
        app:cardBackgroundColor="#9CABC2"
        app:cardCornerRadius="45dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.142"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/userNameText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="150dp"
            android:text="@string/user"
            android:textColor="@color/text_white"
            android:textSize="40sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/userNameText2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="60dp"
            android:layout_marginTop="105dp"
            android:text="@string/hello"
            android:textColor="@color/text_white"
            android:textSize="40sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/profileImage"
            android:layout_width="wrap_content"
            android:layout_height="108dp"
            android:layout_marginStart="260dp"
            android:layout_marginTop="100dp"
            android:layout_marginRight="100dp"
            android:contentDescription="Profile"
            android:padding="2dp"
            android:src="@drawable/avatar"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.cardview.widget.CardView>

    <androidx.cardview.widget.CardView
        android:id="@+id/searchView"
        android:layout_width="311dp"
        android:layout_height="47dp"
        android:layout_marginStart="-360dp"
        android:layout_marginTop="210dp"
        android:paddingStart="0dp"
        app:cardCornerRadius="25dp"
        app:layout_constraintStart_toEndOf="@+id/linearLayout2"
        app:layout_constraintTop_toTopOf="parent">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="-20dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical|end"
            android:layout_marginEnd="20dp"
            app:srcCompat="@drawable/search" />

        <TextView
            android:id="@+id/searchText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="20dp"
            android:layout_marginTop="15dp"
            android:gravity="center_vertical"
            android:text="@string/where_to" />
    </androidx.cardview.widget.CardView>


    <!-- Bottom Navigation -->

    <com.google.android.material.button.MaterialButton
        android:id="@+id/myListingsButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="60dp"
        android:text="@string/your_listings"
        android:textColor="@color/primary_blue"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:strokeColor="#E5E7EB" />

    <com.google.android.material.button.MaterialButton
        android:id="@+id/myBookingsButton"
        style="@style/Widget.MaterialComponents.Button.OutlinedButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="63dp"
        android:layout_marginTop="9dp"
        android:layout_marginEnd="20dp"
        android:text="@string/your_bookings"
        android:textColor="@color/primary_blue"
        app:cornerRadius="0dp"
        app:layout_constraintEnd_toStartOf="@+id/myListingsButton"
        app:layout_constraintHorizontal_bias="0.062"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
        app:strokeColor="#E5E7EB" />

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recyclerView"
        android:layout_width="342dp"
        android:layout_height="262dp"
        android:layout_marginStart="35dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="34dp"
        android:clipToPadding="false"
        android:paddingStart="20dp"
        android:paddingEnd="20dp"
        android:paddingBottom="8dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/myListingsButton" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNav"
        android:layout_width="411dp"
        android:layout_height="62dp"
        android:layout_marginBottom="1dp"
        android:background="@color/white"
        android:elevation="8dp"
        app:itemIconTint="@color/primary_blue"
        app:itemTextColor="@color/primary_blue"
        app:labelVisibilityMode="labeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/bottom_nav_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>